# recallops

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.verify.yaml  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260715_01_create_incidents.py  20260715_02_create_webhook_deliveries.py
scripts/: check_identity.sh  verify-github-app.sh  verify-system.sh  verify_runtime.py
src/incidentecho/: __init__.py  config.py
src/incidentecho/analysis/: __init__.py  matcher.py  workflow.py
src/incidentecho/api/: __init__.py  analysis.py  app.py  dependencies.py  incidents.py  webhooks.py
src/incidentecho/domain/: __init__.py  repositories.py
src/incidentecho/github/: __init__.py  checks.py  client.py  verify.py
src/incidentecho/persistence/: __init__.py  database.py  incidents.py  webhooks.py
src/incidentecho/services/: __init__.py  analysis.py
src/recallops/: __init__.py  config.py
src/recallops/analysis/: __init__.py  matcher.py  workflow.py
src/recallops/api/: __init__.py  analysis.py  app.py  dependencies.py  incidents.py  webhooks.py
src/recallops/domain/: __init__.py  models.py  repositories.py
src/recallops/github/: __init__.py  checks.py  client.py
src/recallops/persistence/: __init__.py  database.py  incidents.py  webhooks.py
src/recallops/services/: __init__.py  analysis.py
tests/: test_analysis_service.py  test_api.py  test_config.py  test_github_checks.py  test_github_client.py  test_github_verify.py  test_matcher.py  test_persistence.py  test_webhooks.py
