[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "recallops"
version = "0.1.0"
description = "Evidence-backed engineering memory for pull-request reviews"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "RecallOps contributors" }]
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recallops"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=recallops --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
